cc/y.output

state 0
	$accept: .top $end 

	startExpr  shift 3
	startProg  shift 2
	.  error

	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  startProg.prog tokEOF 
	prog: .    (3)

	.  reduce 3 (src line 195)

	prog  goto 4

state 3
	top:  startExpr.cexpr tokEOF 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 7
	cexpr  goto 5
	expr_list  goto 6
	string_list  goto 11

state 4
	top:  startProg prog.tokEOF 
	prog:  prog.xdecl 
	prog:  prog.tokAUTOLIB ( tokName ) 

	tokAUTOLIB  shift 27
	tokAuto  shift 52
	tokChar  shift 39
	tokConst  shift 57
	tokDouble  shift 46
	tokEnum  shift 38
	tokExtern  shift 30
	tokFloat  shift 45
	tokInline  shift 56
	tokInt  shift 41
	tokLong  shift 42
	tokRegister  shift 55
	tokShort  shift 40
	tokSigned  shift 43
	tokStatic  shift 53
	tokStruct  shift 50
	tokTypeName  shift 36
	tokTypedef  shift 54
	tokUnion  shift 51
	tokUnsigned  shift 44
	tokVoid  shift 47
	tokVolatile  shift 58
	tokEOF  shift 25
	.  error

	fndef  goto 29
	decl  goto 28
	xdecl  goto 26
	cname  goto 48
	qname  goto 49
	tname  goto 34
	cqname  goto 35
	cqname_list  goto 32
	typeclass  goto 31
	structunion  goto 37
	typespec  goto 33

state 5
	top:  startExpr cexpr.tokEOF 

	tokEOF  shift 59
	.  error


state 6
	cexpr:  expr_list.    (6)
	expr_list:  expr_list., expr 

	,  shift 60
	.  reduce 6 (src line 209)


state 7
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.tokLsh expr 
	expr:  expr.tokRsh expr 
	expr:  expr.< expr 
	expr:  expr.> expr 
	expr:  expr.tokLtEq expr 
	expr:  expr.tokGtEq expr 
	expr:  expr.tokEqEq expr 
	expr:  expr.tokNotEq expr 
	expr:  expr.& expr 
	expr:  expr.^ expr 
	expr:  expr.| expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.tokOrOr expr 
	expr:  expr.? cexpr : expr 
	expr:  expr.= expr 
	expr:  expr.tokAddEq expr 
	expr:  expr.tokSubEq expr 
	expr:  expr.tokMulEq expr 
	expr:  expr.tokDivEq expr 
	expr:  expr.tokModEq expr 
	expr:  expr.tokLshEq expr 
	expr:  expr.tokRshEq expr 
	expr:  expr.tokAndEq expr 
	expr:  expr.tokXorEq expr 
	expr:  expr.tokOrEq expr 
	expr:  expr.( expr_list_opt ) 
	expr:  expr.[ cexpr ] 
	expr:  expr.tokInc 
	expr:  expr.tokDec 
	expr:  expr.tokArrow tag 
	expr:  expr.. tag 
	expr_list:  expr.    (175)

	=  shift 80
	tokAddEq  shift 81
	tokSubEq  shift 82
	tokMulEq  shift 83
	tokDivEq  shift 84
	tokModEq  shift 85
	tokLshEq  shift 86
	tokRshEq  shift 87
	tokAndEq  shift 88
	tokXorEq  shift 89
	tokOrEq  shift 90
	?  shift 79
	tokOrOr  shift 78
	tokAndAnd  shift 77
	|  shift 76
	^  shift 75
	&  shift 74
	tokEqEq  shift 72
	tokNotEq  shift 73
	<  shift 68
	>  shift 69
	tokLtEq  shift 70
	tokGtEq  shift 71
	tokLsh  shift 66
	tokRsh  shift 67
	+  shift 61
	-  shift 62
	*  shift 63
	/  shift 64
	%  shift 65
	.  shift 96
	[  shift 92
	(  shift 91
	tokDec  shift 94
	tokInc  shift 93
	tokArrow  shift 95
	.  reduce 175 (src line 1275)


state 8
	expr:  tokName.    (7)

	.  reduce 7 (src line 220)


state 9
	expr:  tokNumber.    (8)

	.  reduce 8 (src line 226)


state 10
	expr:  tokLitChar.    (9)

	.  reduce 9 (src line 231)


state 11
	expr:  string_list.    (10)
	string_list:  string_list.tokString 

	tokString  shift 97
	.  reduce 10 (src line 236)


state 12
	expr:  *.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 98
	string_list  goto 11

state 13
	expr:  &.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 99
	string_list  goto 11

state 14
	expr:  +.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 100
	string_list  goto 11

state 15
	expr:  -.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 101
	string_list  goto 11

state 16
	expr:  !.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 102
	string_list  goto 11

state 17
	expr:  ~.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 103
	string_list  goto 11

state 18
	expr:  tokInc.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 104
	string_list  goto 11

state 19
	expr:  tokDec.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 105
	string_list  goto 11

state 20
	expr:  tokSizeof.expr 
	expr:  tokSizeof.( abtype ) 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 107
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 106
	string_list  goto 11

state 21
	expr:  tokOffsetof.( abtype , expr ) 

	(  shift 108
	.  error


state 22
	expr:  (.abtype ) expr 
	expr:  (.abtype ) braced_init_list 
	expr:  (.cexpr ) 

	tokAuto  shift 52
	tokChar  shift 39
	tokConst  shift 57
	tokDouble  shift 46
	tokEnum  shift 38
	tokExtern  shift 113
	tokFloat  shift 45
	tokInline  shift 56
	tokInt  shift 41
	tokLitChar  shift 10
	tokLong  shift 42
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokRegister  shift 55
	tokShort  shift 40
	tokSigned  shift 43
	tokStatic  shift 53
	tokStruct  shift 50
	tokTypeName  shift 36
	tokTypedef  shift 54
	tokUnion  shift 51
	tokUnsigned  shift 44
	tokVaArg  shift 23
	tokVoid  shift 47
	tokVolatile  shift 58
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 7
	cexpr  goto 110
	expr_list  goto 6
	cname  goto 48
	qname  goto 49
	tname  goto 34
	cqname  goto 35
	cqname_list  goto 32
	string_list  goto 11
	typeclass  goto 112
	structunion  goto 37
	abtype  goto 109
	type  goto 111
	typespec  goto 33

state 23
	expr:  tokVaArg.( expr , abtype ) 

	(  shift 114
	.  error


state 24
	string_list:  tokString.    (213)

	.  reduce 213 (src line 1494)


state 25
	top:  startProg prog tokEOF.    (1)

	.  reduce 1 (src line 183)


state 26
	prog:  prog xdecl.    (4)

	.  reduce 4 (src line 200)


state 27
	prog:  prog tokAUTOLIB.( tokName ) 

	(  shift 115
	.  error


state 28
	xdecl:  decl.    (132)

	.  reduce 132 (src line 987)


state 29
	xdecl:  fndef.    (133)

	.  reduce 133 (src line 993)


state 30
	cname:  tokExtern.    (104)
	xdecl:  tokExtern.tokString { prog } 

	tokString  shift 116
	.  reduce 104 (src line 787)


state 31
	decl:  typeclass.idecor_list_opt ; 
	fndef:  typeclass.decor decl_list_opt $$135 block 
	idecor_list_opt: .    (189)

	tokName  shift 120
	*  shift 121
	(  shift 122
	.  reduce 189 (src line 1355)

	decor  goto 118
	idecor  goto 123
	idecor_list  goto 119
	idecor_list_opt  goto 117

state 32
	typeclass:  cqname_list.    (124)
	typeclass:  cqname_list.typespec cqname_list_opt 
	typeclass:  cqname_list.tname cqtname_list_opt 
	cqname_list:  cqname_list.cqname 

	tokAuto  shift 52
	tokChar  shift 39
	tokConst  shift 57
	tokDouble  shift 46
	tokEnum  shift 38
	tokExtern  shift 113
	tokFloat  shift 45
	tokInline  shift 56
	tokInt  shift 41
	tokLong  shift 42
	tokRegister  shift 55
	tokShort  shift 40
	tokSigned  shift 43
	tokStatic  shift 53
	tokStruct  shift 50
	tokTypeName  shift 36
	tokTypedef  shift 54
	tokUnion  shift 51
	tokUnsigned  shift 44
	tokVoid  shift 47
	tokVolatile  shift 58
	.  reduce 124 (src line 910)

	cname  goto 48
	qname  goto 49
	tname  goto 125
	cqname  goto 126
	structunion  goto 37
	typespec  goto 124

state 33
	typeclass:  typespec.cqname_list_opt 
	cqname_list_opt: .    (197)

	tokAuto  shift 52
	tokConst  shift 57
	tokExtern  shift 113
	tokInline  shift 56
	tokRegister  shift 55
	tokStatic  shift 53
	tokTypedef  shift 54
	tokVolatile  shift 58
	.  reduce 197 (src line 1401)

	cname  goto 48
	qname  goto 49
	cqname  goto 35
	cqname_list  goto 128
	cqname_list_opt  goto 127

state 34
	typeclass:  tname.cqtname_list_opt 
	cqtname_list_opt: .    (201)

	tokAuto  shift 52
	tokChar  shift 39
	tokConst  shift 57
	tokDouble  shift 46
	tokExtern  shift 113
	tokFloat  shift 45
	tokInline  shift 56
	tokInt  shift 41
	tokLong  shift 42
	tokRegister  shift 55
	tokShort  shift 40
	tokSigned  shift 43
	tokStatic  shift 53
	tokTypedef  shift 54
	tokUnsigned  shift 44
	tokVoid  shift 47
	tokVolatile  shift 58
	.  reduce 201 (src line 1424)

	cname  goto 48
	qname  goto 49
	tname  goto 133
	cqname  goto 132
	cqtname  goto 131
	cqtname_list  goto 130
	cqtname_list_opt  goto 129

state 35
	cqname_list:  cqname.    (195)

	.  reduce 195 (src line 1389)


state 36
	typespec:  tokTypeName.    (123)

	.  reduce 123 (src line 894)


state 37
	typespec:  structunion.tag 
	typespec:  structunion.tag_opt { sudecl_list } 
	tag_opt: .    (169)

	tokName  shift 136
	tokTypeName  shift 137
	.  reduce 169 (src line 1242)

	tag  goto 134
	tag_opt  goto 135

state 38
	typespec:  tokEnum.tag 
	typespec:  tokEnum.tag_opt { edecl_list comma_opt } 
	tag_opt: .    (169)

	tokName  shift 136
	tokTypeName  shift 137
	.  reduce 169 (src line 1242)

	tag  goto 138
	tag_opt  goto 139

state 39
	tname:  tokChar.    (110)

	.  reduce 110 (src line 822)


state 40
	tname:  tokShort.    (111)

	.  reduce 111 (src line 828)


state 41
	tname:  tokInt.    (112)

	.  reduce 112 (src line 833)


state 42
	tname:  tokLong.    (113)

	.  reduce 113 (src line 838)


state 43
	tname:  tokSigned.    (114)

	.  reduce 114 (src line 843)


state 44
	tname:  tokUnsigned.    (115)

	.  reduce 115 (src line 848)


state 45
	tname:  tokFloat.    (116)

	.  reduce 116 (src line 853)


state 46
	tname:  tokDouble.    (117)

	.  reduce 117 (src line 858)


state 47
	tname:  tokVoid.    (118)

	.  reduce 118 (src line 863)


state 48
	cqname:  cname.    (119)

	.  reduce 119 (src line 869)


state 49
	cqname:  qname.    (120)

	.  reduce 120 (src line 875)


state 50
	structunion:  tokStruct.    (139)

	.  reduce 139 (src line 1043)


state 51
	structunion:  tokUnion.    (140)

	.  reduce 140 (src line 1049)


state 52
	cname:  tokAuto.    (102)

	.  reduce 102 (src line 776)


state 53
	cname:  tokStatic.    (103)

	.  reduce 103 (src line 782)


state 54
	cname:  tokTypedef.    (105)

	.  reduce 105 (src line 792)


state 55
	cname:  tokRegister.    (106)

	.  reduce 106 (src line 797)


state 56
	cname:  tokInline.    (107)

	.  reduce 107 (src line 802)


state 57
	qname:  tokConst.    (108)

	.  reduce 108 (src line 809)


state 58
	qname:  tokVolatile.    (109)

	.  reduce 109 (src line 815)


state 59
	top:  startExpr cexpr tokEOF.    (2)

	.  reduce 2 (src line 189)


state 60
	expr_list:  expr_list ,.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 140
	string_list  goto 11

state 61
	expr:  expr +.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 141
	string_list  goto 11

state 62
	expr:  expr -.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 142
	string_list  goto 11

state 63
	expr:  expr *.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 143
	string_list  goto 11

state 64
	expr:  expr /.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 144
	string_list  goto 11

state 65
	expr:  expr %.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 145
	string_list  goto 11

state 66
	expr:  expr tokLsh.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 146
	string_list  goto 11

state 67
	expr:  expr tokRsh.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 147
	string_list  goto 11

state 68
	expr:  expr <.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 148
	string_list  goto 11

state 69
	expr:  expr >.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 149
	string_list  goto 11

state 70
	expr:  expr tokLtEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 150
	string_list  goto 11

state 71
	expr:  expr tokGtEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 151
	string_list  goto 11

state 72
	expr:  expr tokEqEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 152
	string_list  goto 11

state 73
	expr:  expr tokNotEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 153
	string_list  goto 11

state 74
	expr:  expr &.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 154
	string_list  goto 11

state 75
	expr:  expr ^.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 155
	string_list  goto 11

state 76
	expr:  expr |.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 156
	string_list  goto 11

state 77
	expr:  expr tokAndAnd.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 157
	string_list  goto 11

state 78
	expr:  expr tokOrOr.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 158
	string_list  goto 11

state 79
	expr:  expr ?.cexpr : expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 7
	cexpr  goto 159
	expr_list  goto 6
	string_list  goto 11

state 80
	expr:  expr =.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 160
	string_list  goto 11

state 81
	expr:  expr tokAddEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 161
	string_list  goto 11

state 82
	expr:  expr tokSubEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 162
	string_list  goto 11

state 83
	expr:  expr tokMulEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 163
	string_list  goto 11

state 84
	expr:  expr tokDivEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 164
	string_list  goto 11

state 85
	expr:  expr tokModEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 165
	string_list  goto 11

state 86
	expr:  expr tokLshEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 166
	string_list  goto 11

state 87
	expr:  expr tokRshEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 167
	string_list  goto 11

state 88
	expr:  expr tokAndEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 168
	string_list  goto 11

state 89
	expr:  expr tokXorEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 169
	string_list  goto 11

state 90
	expr:  expr tokOrEq.expr 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 170
	string_list  goto 11

state 91
	expr:  expr (.expr_list_opt ) 
	expr_list_opt: .    (177)

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  reduce 177 (src line 1287)

	expr  goto 7
	expr_list  goto 172
	expr_list_opt  goto 171
	string_list  goto 11

state 92
	expr:  expr [.cexpr ] 

	tokLitChar  shift 10
	tokName  shift 8
	tokNumber  shift 9
	tokOffsetof  shift 21
	tokVaArg  shift 23
	tokString  shift 24
	&  shift 13
	+  shift 14
	-  shift 15
	*  shift 12
	!  shift 16
	~  shift 17
	tokSizeof  shift 20
	(  shift 22
	tokDec  shift 19
	tokInc  shift 18
	.  error

	expr  goto 7
	cexpr  goto 173
	expr_list  goto 6
	string_list  goto 11

state 93
	expr:  expr tokInc.    (57)

	.  reduce 57 (src line 471)


state 94
	expr:  expr tokDec.    (58)

	.  reduce 58 (src line 476)


state 95
	expr:  expr tokArrow.tag 

	tokName  shift 136
	tokTypeName  shift 137
	.  error

	tag  goto 174

state 96
	expr:  expr ..tag 

	tokName  shift 136
	tokTypeName  shift 137
	.  error

	tag  goto 175

state 97
	string_list:  string_list tokString.    (214)
